--- a/analysis 2/Etude de la biométrie humaine.Rmd
+++ b/analysis 2/Etude de la biométrie humaine.Rmd
@@ -135,7 +135,7 @@ chart(data = biometry, masse_corr ~ fastfood | age_schedule) +
   labs(x = "Nombre de fastfood/semaine", y = "Masse [kg]")
 ```
  
-  Ce graphique nous permet de voir l'influence des fatsfood sur le poids. Nous pouvons déjà remarquer dans un premier temps que la f'équentation des fastfood est un phénomène lié à l'âge, en effet une fois la soixantaine passée, le taux de fréquentation des fastfood n'excède pas 1 fois par semaine et ce chiffre n'est que pour une minorité, la majorité des individus n'y vont pas du tout. On remarque que chez les adolescents et jeunes adultes le nombre de fastfood par semaine n'influence pas beaucoup le poids. Chez les adolescents, entre 40 et 80kg la fréquentation des fatsfoods va de 0 à 3 fois par semaine sans différence marquante dans leur poids sauf une ou 2 exeptions. Chez les jeunes adultes, le taux de fréquentation augmente mais des personnes ayant un poids plus élevé sont enregistrées pour une fréquentation des fastfoods s'élevant à seulement 1 fois par semaine, la majorité des individus allant 2 fois par semaine ayant tendance à présenter un poids moins élevé que ces derniers. Chez les adultes (40 à 60ans) même conclusion on ne voit pas une différence de poids significative entre les personnes allant 1 fois, 2 fois ou encore 3 fois par semaine dans un fasfood. 
+  Ce graphique nous permet de voir l'influence des fatsfood sur le poids. Nous pouvons déjà remarquer dans un premier temps que la fréquentation des fastfood est un phénomène lié à l'âge, en effet une fois la soixantaine passée, le taux de fréquentation des fastfood n'excède pas 1 fois par semaine et ce chiffre n'est que pour une minorité, la majorité des individus n'y vont pas du tout. On remarque que chez les adolescents et jeunes adultes le nombre de fastfood par semaine n'influence pas beaucoup le poids. Chez les adolescents, entre 40 et 80kg la fréquentation des fatsfoods va de 0 à 3 fois par semaine sans différence marquante dans leur poids sauf une ou 2 exeptions. Chez les jeunes adultes, le taux de fréquentation augmente mais des personnes ayant un poids plus élevé sont enregistrées pour une fréquentation des fastfoods s'élevant à seulement 1 fois par semaine, la majorité des individus allant 2 fois par semaine ayant tendance à présenter un poids moins élevé que ces derniers. Chez les adultes (40 à 60ans) même conclusion on ne voit pas une différence de poids significative entre les personnes allant 1 fois, 2 fois ou encore 3 fois par semaine dans un fasfood. 
   Les personnes ayant un poids plus élevé ne mange donc pas spécialement plus de fastfood et les personnes plus mince n'en mange pas spécialement moins. 
   La différence de poids entre les jeunes et les personnes plus âgées constatée par ce graphique précédent n'est donc pas liée au taux de fréquentation des fastfoods. 
 
@@ -188,7 +188,7 @@ b <- ggpubr::ggtexttable(head(imc_schedule_count))
 combine_charts(list(a, b))
 ```
 
- Un tableau recensant précisément le nombre d'individus pour chacun des paliers sur l'échelle d'IMC a été réalisé en parallèle du graphique. Nous pouvons remarquer que sur 212 individus plus de la moitié (118) possèdent un poids pouvant être qualifié de normal selon l'échelle d'IMC (soit imc >= 18.5 & imc < 25). Néanmoins environ 35% des individus de cet échantillon sont également caractérisés par un imc supérieur à la moyenne avec 47 individus en surpoids et 33 qui souffrent d'obésité. La tendance pour un poids inférieur à la moyenne étant moindre avec 14 individus soit environ 7%. Nous pouvons donc retenir que même si plus de la moitié des personnes de cet échantillon ont un poids considéré comme "normal", une autre partie non négligeable possède un poids pouvant être qualifié de nocif pour un état de santé favorable.
+ Un tableau recensant précisément le nombre d'individus pour chacun des paliers sur l'échelle d'IMC a été réalisé en parallèle du graphique. Nous pouvons remarquer que sur 212 individus plus de la moitié (118) possèdent un poids pouvant être qualifié de normal selon l'échelle d'IMC (soit imc >= 18.5 & imc < 25). Néanmoins environ 35% des individus de cet échantillon sont également caractérisés par un imc supérieur à la moyenne avec 47 individus en surpoids et 33 qui souffrent d'obésité. La tendance pour un poids inférieur à la moyenne étant moindre avec 14 individus soit environ 7%. Nous pouvons donc retenir que même si plus de la moitié des personnes de cet échantillon ont un poids considéré comme "normal", une autre partie non négligeable possède un poids pouvant être qualifié de nocif pour un état de santé favorable. Mais l'IMC bien qu'étant très populaire est à prendre avec des pincettes, vu que dans sa formule il ne prend ne compte que le poids et la taille, il ne faut pas oublié que les muscules sont plus lourd que la graisse une personne peut donc etre musclée par exemple etre plus lourde que la moyenne sans pour autant etre en obésité. 
  
 ###Répartiton au sein de chacun des paliers d'IMC du degré d'activité dans le cadre de la profession
 ```{r}
@@ -223,7 +223,7 @@ combine_charts(list(a, b))
  combine_charts(list(c, d, e, f), common.legend = TRUE)
 ```
 
-  Ce graphique permet une vue d'ensemble des données. On constate que la majorité des personnes interrogées sont sédentaires. Cette sédentarité n'est pas un facteur déterminant de surpoids ou d'obésité étant donné qu'il y quasi autant de personnes sédentaires chez les personnes en sous-poids que chez les personnes dites obèses. 
+  Ce graphique permet une vue d'ensemble des données. On constate que la majorité des personnes interrogées sont sédentaires. Cette sédentarité n'est pas un facteur déterminant de surpoids ou d'obésité étant donné qu'il y a quasi autant de personnes sédentaires chez les personnes en sous-poids que chez les personnes dites obèses. 
   On remarque que l'activité professionelle n'influence pas beaucoup l'IMC ce qui est étonnnant.
 
 ###Distribution de l'activité physique au sein des différents paliers de l'échelle d'IMC
@@ -243,7 +243,7 @@ m <- chart(data = biometry, ~ acti_physique %fill=% genre) +
  combine_charts(list(l, m), common.legend = TRUE)
 ```
 
-  On peut oberver sur ce graphique que la grande majorité des personnes victimes de surpoids ou d'obésité ont tendance à ne pas effectuer d'activité physique, ceci pourrait donc être considéré comme un facteur d'obésité. De plus, les personnes ayant un poids normal et en sous-poids effectuent une activité physique dite plus régulière avec pour certains plus de 5 heures de sport par semaine. Un histogramme a été réalisé en parallèle afin de déterminer si il existait une différence entre le nombre d'heures de sport effectuées par les femmes et par les hommes. Visiblement ce n'est pas le cas, hommes et femmes effectuent un nombre d'heure de sport similaire (entre 0 et 10h), et dpour chaque genre il existe des excpetions allant jusqu'à plus de 30h de sport par semaine, certaines personnes étant tout simplement plus sportives que d'autres.
+  On peut oberver sur ce graphique que la grande majorité des personnes victimes de surpoids ou d'obésité ont tendance à ne pas effectuer d'activité physique, ceci pourrait donc être considéré comme un facteur d'obésité. De plus, les personnes ayant un poids normal et en sous-poids effectuent une activité physique dite plus régulière avec pour certains plus de 5 heures de sport par semaine. Un histogramme a été réalisé en parallèle afin de déterminer si il existait une différence entre le nombre d'heures de sport effectuées par les femmes et par les hommes. Visiblement ce n'est pas le cas, hommes et femmes effectuent un nombre d'heure de sport similaire (entre 0 et 10h), et pour chaque genre il existe des excpetions allant jusqu'à plus de 30h de sport par semaine, certaines personnes étant tout simplement plus sportives que d'autres.
 
 ###Répartition des différents paliers sur l'échelle d'IMC suivant le tour de hanche, le tour de taille et le tour de poignet
 ```{r}
@@ -280,7 +280,7 @@ chart(data = biometry, ~ grignotage | imc_schedule ) +
   ylab("Densité")
 ```
 
-  Contrairement à toute attente, le grignatge n'est pas source d'obésité. Les personnes considérées comme obèses ou encore en surpoids ne grignotent pas davantage que des personnes ayant un poids considéré comme normal. Au contraire, on remarque clairement sur ce graphique que les personnes en sous_poids grignotent davantage que ces personnes en surpoids ou obèses.
+  Contrairement à toute attente, le grignotge n'est pas source d'obésité. Les personnes considérées comme obèses ou encore en surpoids ne grignotent pas davantage que des personnes ayant un poids considéré comme normal. Au contraire, on remarque clairement sur ce graphique que les personnes en sous_poids grignotent davantage que ces personnes en surpoids ou obèses.
   Le nombre de grignotages par jour n'est donc pas un facteur permettant de comprendre la source de l'obésité.
   
 ###Distibution du nombre de repas par jour pour chacun des paliers sur l'échelle d'IMC
@@ -474,21 +474,14 @@ Il y a une différence significative entre les hommes actifs - intermédiaire ca
 
 
 #Discussion
+Les différents test sont effectué pour montrer que les resultats obtenus sont (ou pas) dû au hasard, la conclusion de ces différents test se trouve sous c'est dernier. Les différents graphiques sont utilisé de facon à faire ressortir des données qui auraient un lien entre elles et qui pourrai s'influencer l'une l'autre ainsi que le poids qui est notre question principale. Durant le rapport la variable "IMC" à été intégrée. Cette variable permet uen meilleure vison des resultats car elle determine si il y a obésité ou non et jusqu'a quel point. De plus, l'IMC ne prend en compte que le poids et la taille si on fait le test à la maison on peut voir parfois que l'IMC peut afficher "surpoids" alors que la personne est juste plus musclée ou à juste un petit ventre ou tout au contraire une personne affichée "sous poids" alors qu'elle est juste plus grande et mince ou qui est juste à la limite du "poids normal" et du "sous poids". L'IMC est donc un bon indicateur mais n'est pas à faire confiance à 100%. 
+Grace aux différent graphique on remarque que l'age influence le poids ce qui est assez logique car un jeune est en croissance, bouge plus (sauf exeption) et a un metabolisme plus rapide qu'une personne plus agée ce qui explique que les jeunes peuvent aller plus au fastfood sans frocément voir leurs poids changer. En effet on a observer une tendance marquée pour les jeunes d'aller au fastfood ce qui est facilement explicable aussi car à cause des cours c'est plus simple d'aller au fastfood entre amis que de se faire à manger. Au niveau de l'activité professionelle on voit que la plupart de l'echantillon est sédentaire mais qu'il n'y a pas d'influence sur le poids, ceci peut s'expliquer si une partie non négligeable de l'echantillon est adolescent ou jeune adulte car etre étudiant est considéré comme etre sédentaire or comme expliqué précédement un jeune de prend pas beaucoup de poids, de plus on peut avoir un métier sédentaire et faire beaucoup d'activité physique. En restant dans l'activité physique, elle influence beaucoup car selon les résultats, les personnes en faisant pas d'activité physique ont plus tendance à etre en obésité tandis que ceux qui partique du sport régulièrement on un poids normal voir un sous poids. Si les fastfood n'ont pas d'influence on peut penser que les grignotages ou la consomation d'alcool en auront mais non, pour le grignotage c'est les gens en sous poids qui en font le plus mais on peut penser que si il y a beaucoup de grignotages il y a peu voir pas de repas. Mais lorsqu'on étudie le nombre de repas par jour on voti qu'il n'influence pas non plus mais on ne connait ni la quantité ni la qualité des repas. L'alcool n'influence pas non plus mais on remarque quand meme une majorité de personne qui boivent de l'alcool chez les sédentaires. Les tour de hanche et de taille ont été mesuré et permettent de voir si l'IMC correspond à ces mesures vu que c'est proportionnel au poids, le tour du poignet lui n'est pas du tout fiable.
 
-Le test de student effectué nous montre que le poids des femmes et des hommes sont différents et il n’est pas dû au hasard de l’échantillonage. 
-Les personnes ayant participé au sondage sont essentiellement des femmes (109 femmes pour 103 hommes).
-Les femmes ont tendance à avoir un travail sédentaire serait-il une raison au surpoids ? Cependant elles ont tout de même un poids moins élevée en moyenne que les hommes.
-Le poids fluctuent de manière étrange et nous obtenons des résultats inattendus comme des femmes actives qui ont un poids plus élevé que celles qui sont sédentaires. On observe ce même phénomène chez les hommes.  Est-ce que l’activité professionnelle n’aurait pas d’influence sur le poids ?
-Les fastfood n’influent par sur le poids des jeunes car ceux-ci sont en pleine croissance et un métabolisme plus performant. Et il n’y a pas de lien entre les personnes ayant un poids plus élevé et le nombre de fastfood par semaine donc le sfastfoods n’auraient pas d’influence réelle
-Par contre le sport a une influence sur le poids, en effet les personnes pratiquant du sport ont un poids moins élevé que celle qui ne le pratique pas ou peu. Le poid est généralement proportionnele a la taille ce qui montrerait que le hainaut n’est pas en surpoids en moyenne.
-On constate aussi avec le graphique représentant l’imc que ceux-ci sont généralement en poids normal et très peu sont en en obésité 
-Les personnes souffrant d’obésité ont un tour de taille et un tour de hanche plus élevé que la moyenne ce qui  est logique considérant leur poids élevé
-Les personnes ayant une activité professionnelle sédentaire ont une consommation plus grande en alcool que les autres.
 
 #Conclusion 
 
 On constate en général que les hommes ont un poids plus élevé que celui des femmes cela peut s'expliquer par le fait que leur masse musculaire est plus grande à cause la testostérone et ils sont généralement plus grand et nous avons vu que le poids était proportionnel à la taille.
 Les jeunes ont tendance à avoir un poids plus équilibrer qu'il fasse du sport, qu'ils boivent de l'alcool ou non. Ils ont une meilleure conditions physique et récupère plus vite que les adultes car ils sont encore en pleine croissance. Donc même s'ils mangent gras ou consomment beaucoup de viandes, cela n'a pas un réel effet sur leur imc.
-Les personnes âgées mangent moins bien et n'ont pplus d'activité physique fréquente ni d'activité professionnelle nonplus donc ils ont tendance à prende du poids.
-Nous constatons aussi que l'activité professionnelle n'est pas un bon indicateur pour savoir si les personnes qui sont moins actives au travail sont plus lourds car il y a d'autres facteurs à prendre en compte comme les repas oou encore le sport et la quantité de verre d'alcool par semaine. 
-Sur nos graphique on s'aperçoit également que le hainaut n'est pas en obésité. Nous avons une grande majorité des personnes en poids normal. 
+Les personnes âgées mangent moins bien et n'ont plus d'activité physique fréquente ni d'activité professionnelle non plus donc ils ont tendance à prende du poids. Cartaines personne agée peuvent aussi en perdre à cause 
+Nous constatons aussi que l'activité professionnelle n'est pas un bon indicateur pour savoir si les personnes qui sont moins actives au travail sont plus lourds car il y a d'autres facteurs à prendre en compte comme les repas ou encore le sport et la quantité de verre d'alcool par semaine ou encore le grignotage qui n'inluence pas non plus.
+Sur nos graphique on s'aperçoit également que le hainaut n'est pas en obésité. Nous avons une grande majorité des personnes en poids normal avec comme influenceur principale, l'age et le sport. 
