--- a/analysis /Etude de la biométrie humaine.Rmd
+++ b/analysis /Etude de la biométrie humaine.Rmd
@@ -2,7 +2,9 @@
 title: "Etude de la biométrie humaine"
 author: "Laura Braeckevelt, Laura Toubeau, Margaux Renier, Lisa Mussoi"
 date: "14/11/2018"
-output: 
+output:
+  pdf_document:
+    toc: yes
   html_document:
     Fig_caption: yes
     highlight: tango
@@ -123,7 +125,7 @@ chart(data = biometry, masse_corr ~ age_schedule %fill=% genre) +
   labs(x = "Échelle d'âge", y = "Masse [kg]")
 ```
  
-  Nous avons regroupé les individus par tranches d'âge allant de 15 à 74 ans. Nous observons que les hommes ont tendance de manière générale à avoir une masse plus élevée que celle des femmes. Nous remarquons pour les femmes que la masse s'accroît avec l'âge pour la majorité, ceci est observable par le fait qu'à partir de 60ans la masse est strictement supérieure à 57kg ce qui n'est pas le cas pour les autres tranches d'âges. Chez les hommes, il en est de même lorsque l'on se cconcentre sur la majorité des individus même si des valeurs extrêmes ont été enregistrées à l'âge adulte avec des masses pouvant aller jusque 177kg.
+  Nous avons regroupé les individus par tranches d'âge allant de 15 à 74 ans. Nous observons que les hommes ont tendance de manière générale à avoir une masse plus élevée que celle des femmes. Nous remarquons pour les femmes que la masse s'accroît avec l'âge pour la majorité, ceci est observable par le fait qu'à partir de 60ans la masse est strictement supérieure à 57kg ce qui n'est pas le cas pour les autres tranches d'âge. Chez les hommes, il en est de même lorsque l'on se concentre sur la majorité des individus même si des valeurs extrêmes ont été enregistrées à l'âge adulte avec des masses pouvant aller jusque 177kg.
   L'âge peut donc influencer la masse des individus.
  
  
@@ -188,7 +190,7 @@ b <- ggpubr::ggtexttable(head(imc_schedule_count))
 combine_charts(list(a, b))
 ```
 
- Un tableau recensant précisément le nombre d'individus pour chacun des paliers sur l'échelle d'IMC a été réalisé en parallèle du graphique. Nous pouvons remarquer que sur 212 individus plus de la moitié (118) possèdent un poids pouvant être qualifié de normal selon l'échelle d'IMC (soit imc >= 18.5 & imc < 25). Néanmoins environ 35% des individus de cet échantillon sont également caractérisés par un imc supérieur à la moyenne avec 47 individus en surpoids et 33 qui souffrent d'obésité. La tendance pour un poids inférieur à la moyenne étant moindre avec 14 individus soit environ 7%. Nous pouvons donc retenir que même si plus de la moitié des personnes de cet échantillon ont un poids considéré comme "normal", une autre partie non négligeable possède un poids pouvant être qualifié de nocif pour un état de santé favorable. Mais l'IMC bien qu'étant très populaire est à prendre avec des pincettes, vu que dans sa formule il ne prend ne compte que le poids et la taille, il ne faut pas oublié que les muscules sont plus lourd que la graisse une personne peut donc etre musclée par exemple etre plus lourde que la moyenne sans pour autant etre en obésité. 
+ Un tableau recensant précisément le nombre d'individus pour chacun des paliers sur l'échelle d'IMC a été réalisé en parallèle du graphique. Nous pouvons remarquer que sur 212 individus plus de la moitié (118) possèdent un poids pouvant être qualifié de normal selon l'échelle d'IMC (soit imc >= 18.5 & imc < 25). Néanmoins environ 35% des individus de cet échantillon sont également caractérisés par un imc supérieur à la moyenne avec 47 individus en surpoids et 33 qui souffrent d'obésité. La tendance pour un poids inférieur à la moyenne étant moindre avec 14 individus soit environ 7%. Nous pouvons donc retenir que même si plus de la moitié des personnes de cet échantillon ont un poids considéré comme "normal", une autre partie non négligeable possède un poids pouvant être qualifié de nocif pour un état de santé favorable. Mais l'IMC bien qu'étant très populaire est à prendre avec des pincettes, vu que dans sa formule il ne prend ne compte que le poids et la taille, il ne faut pas oublié que les muscles sont plus lourds que la graisse une personne peut donc etre musclée par exemple et etre plus lourde que la moyenne sans pour autant etre en obésité. 
  
 ###Répartiton au sein de chacun des paliers d'IMC du degré d'activité dans le cadre de la profession
 ```{r}
@@ -243,7 +245,7 @@ m <- chart(data = biometry, ~ acti_physique %fill=% genre) +
  combine_charts(list(l, m), common.legend = TRUE)
 ```
 
-  On peut oberver sur ce graphique que la grande majorité des personnes victimes de surpoids ou d'obésité ont tendance à ne pas effectuer d'activité physique, ceci pourrait donc être considéré comme un facteur d'obésité. De plus, les personnes ayant un poids normal et en sous-poids effectuent une activité physique dite plus régulière avec pour certains plus de 5 heures de sport par semaine. Un histogramme a été réalisé en parallèle afin de déterminer si il existait une différence entre le nombre d'heures de sport effectuées par les femmes et par les hommes. Visiblement ce n'est pas le cas, hommes et femmes effectuent un nombre d'heure de sport similaire (entre 0 et 10h), et pour chaque genre il existe des excpetions allant jusqu'à plus de 30h de sport par semaine, certaines personnes étant tout simplement plus sportives que d'autres.
+  On peut observer sur ce graphique que la grande majorité des personnes victimes de surpoids ou d'obésité ont tendance à ne pas effectuer d'activité physique, ceci pourrait donc être considéré comme un facteur d'obésité. De plus, les personnes ayant un poids normal et en sous-poids effectuent une activité physique dite plus régulière avec pour certains plus de 5 heures de sport par semaine. Un histogramme a été réalisé en parallèle afin de déterminer si il existait une différence entre le nombre d'heures de sport effectuées par les femmes et par les hommes. Visiblement ce n'est pas le cas, hommes et femmes effectuent un nombre d'heures de sport similaire (entre 0 et 10h), et pour chaque genre il existe des excpetions allant jusqu'à plus de 30h de sport par semaine, certaines personnes étant tout simplement plus sportives que d'autres.
 
 ###Répartition des différents paliers sur l'échelle d'IMC suivant le tour de hanche, le tour de taille et le tour de poignet
 ```{r}
@@ -270,7 +272,7 @@ combine_charts(list(a, b, c ), common.legend = TRUE)
 
   Sur base de ce graphique, nous pouvons relever que les valeurs pour les deux variables "tour de hanche"" et "tour de taille" se répartissent de manière plus ou moins semblables ce qui peut nous indiquer d'une part une certaine corrélation entre la répartiton générale de ces valeurs et la corpulence de l'individu ainsi qu'une certaine proportionalité dans les mensurations de la personne.
 Aussi, les individus considérés comme souffrants d'obésité sont ceux qui présentent les valeurs les plus élevées de tour de hanche et de taille (allant de +/- 100 à 170cm), suivis des cas de surpoids, de poids normal et enfin de sous-poids, ce qui n'est pas surprenant.
-La mesure de ces parties du corps est donc un méthode assez représentative de la corpulence générale de la personne, pouvant laisse apparaître un certain surpoids ou au contraire une maigreur significative.
+La mesure de ces parties du corps est donc un méthode assez représentative de la corpulence générale de la personne, pouvant laisser apparaître un certain surpoids ou au contraire une maigreur significative.
 En ce qui concerne la mesure du tour de poignet, elle permet d'appuyer les résultats précédents en terme de surpoids et d'obésité. Néanmoins en ce qui concerne la maigreur il ne s'agit pas d'un bon indicateur étant donné que certaines personnes ayant un poids normal ont un tour de poignet encore inférieur aux personnes en situation de sous-poids même si une légère tendance peut être remarquée avec une tendance globale accrûe chez ces personnes entre 13 et 18 cm. 
 
 ###Distribution du nombre de grignotage par jour pour chacun des paliers de l'échelle d'IMC
@@ -280,7 +282,7 @@ chart(data = biometry, ~ grignotage | imc_schedule ) +
   ylab("Densité")
 ```
 
-  Contrairement à toute attente, le grignotge n'est pas source d'obésité. Les personnes considérées comme obèses ou encore en surpoids ne grignotent pas davantage que des personnes ayant un poids considéré comme normal. Au contraire, on remarque clairement sur ce graphique que les personnes en sous_poids grignotent davantage que ces personnes en surpoids ou obèses.
+  Contrairement à toute attente, le grignotage n'est pas source d'obésité. Les personnes considérées comme obèses ou encore en surpoids ne grignotent pas davantage que des personnes ayant un poids considéré comme normal. Au contraire, on remarque clairement sur ce graphique que les personnes en sous-poids grignotent davantage que ces personnes en surpoids ou obèses.
   Le nombre de grignotages par jour n'est donc pas un facteur permettant de comprendre la source de l'obésité.
   
 ###Distibution du nombre de repas par jour pour chacun des paliers sur l'échelle d'IMC
@@ -325,7 +327,7 @@ chart(biometry_2018, masse_corr ~ genre %fill=% genre) + geom_boxplot(na.rm = TR
   On observe que les hommes tendent à avoir une masse plus importante que celle des femmes mais cette différence est-elle significative ou peut-elle être juste liée au hasard de l’échantillonnage ?
  Pour y répondre, nous devons élaborer un test d’hypothèse qui va confronter les hypothèses suivantes (en se basant sur les moyennes) :  
 
-H0 : les moyennes du poids des hommes et des femmes ne sont pas significatvements différents  
+H0 : les moyennes du poids des hommes et des femmes ne sont pas significatvements différentes  
 H1 : les moyennes du poids des hommes et des femmes sont différentes  
  
 ```{r test de student}
@@ -333,15 +335,15 @@ t.test(data = biometry_2018, masse_corr ~ genre,
   alternative = "two.sided", conf.level = 0.95, var.equal = TRUE)
 ```
 
-Prenons une valeur de α de 5% (α = 0,05). On compare cette valeur de α avec notre valeur de p qui est de : p-value = 1.095e-08. On doit rejeter H0 car car p<<<<α,    il se situe donc dans la zone de rejet.   
+Prenons une valeur de α de 5% (α = 0,05). On compare cette valeur de α avec notre valeur de p qui est de : p-value = 1.095e-08. On doit rejeter H0 car p<<<<α,    il se situe donc dans la zone de rejet.   
 
- 
-  
+
+
 ###Test de l'Anova à un facteur
->Pourquoi cela ne s'affiche pas comme un titre quand on fait knit?
 
 
-  Les tests t de Student est limité à la comparaison de deux populations. Aussi, poursuivons notre analyse de la biométrie humaine en comparant simultanément les hommes et les femmes des différents types d'activités professionnelles, ce qui nous donne au totale six sous-populations à comparer.  
+
+  Les tests t de Student est limité à la comparaison de deux populations. Aussi, poursuivons notre analyse de la biométrie humaine en comparant simultanément les hommes et les femmes des différents types d'activités professionnelles, ce qui nous donne un total six sous-populations à comparer.  
 
 ```{r}
 filter(biometry ,genre != "h") -> biometry_women
@@ -474,14 +476,14 @@ Il y a une différence significative entre les hommes actifs - intermédiaire ca
 
 
 #Discussion
-Les différents test sont effectué pour montrer que les resultats obtenus sont (ou pas) dû au hasard, la conclusion de ces différents test se trouve sous c'est dernier. Les différents graphiques sont utilisé de facon à faire ressortir des données qui auraient un lien entre elles et qui pourrai s'influencer l'une l'autre ainsi que le poids qui est notre question principale. Durant le rapport la variable "IMC" à été intégrée. Cette variable permet uen meilleure vison des resultats car elle determine si il y a obésité ou non et jusqu'a quel point. De plus, l'IMC ne prend en compte que le poids et la taille si on fait le test à la maison on peut voir parfois que l'IMC peut afficher "surpoids" alors que la personne est juste plus musclée ou à juste un petit ventre ou tout au contraire une personne affichée "sous poids" alors qu'elle est juste plus grande et mince ou qui est juste à la limite du "poids normal" et du "sous poids". L'IMC est donc un bon indicateur mais n'est pas à faire confiance à 100%. 
-Grace aux différent graphique on remarque que l'age influence le poids ce qui est assez logique car un jeune est en croissance, bouge plus (sauf exeption) et a un metabolisme plus rapide qu'une personne plus agée ce qui explique que les jeunes peuvent aller plus au fastfood sans frocément voir leurs poids changer. En effet on a observer une tendance marquée pour les jeunes d'aller au fastfood ce qui est facilement explicable aussi car à cause des cours c'est plus simple d'aller au fastfood entre amis que de se faire à manger. Au niveau de l'activité professionelle on voit que la plupart de l'echantillon est sédentaire mais qu'il n'y a pas d'influence sur le poids, ceci peut s'expliquer si une partie non négligeable de l'echantillon est adolescent ou jeune adulte car etre étudiant est considéré comme etre sédentaire or comme expliqué précédement un jeune de prend pas beaucoup de poids, de plus on peut avoir un métier sédentaire et faire beaucoup d'activité physique. En restant dans l'activité physique, elle influence beaucoup car selon les résultats, les personnes en faisant pas d'activité physique ont plus tendance à etre en obésité tandis que ceux qui partique du sport régulièrement on un poids normal voir un sous poids. Si les fastfood n'ont pas d'influence on peut penser que les grignotages ou la consomation d'alcool en auront mais non, pour le grignotage c'est les gens en sous poids qui en font le plus mais on peut penser que si il y a beaucoup de grignotages il y a peu voir pas de repas. Mais lorsqu'on étudie le nombre de repas par jour on voti qu'il n'influence pas non plus mais on ne connait ni la quantité ni la qualité des repas. L'alcool n'influence pas non plus mais on remarque quand meme une majorité de personne qui boivent de l'alcool chez les sédentaires. Les tour de hanche et de taille ont été mesuré et permettent de voir si l'IMC correspond à ces mesures vu que c'est proportionnel au poids, le tour du poignet lui n'est pas du tout fiable.
+Les différents test sont effectués pour montrer que les resultats obtenus sont (ou pas) dû au hasard, la conclusion de ces différents test se trouve sous c'est dernier. Les différents graphiques sont utilisés de facon à faire ressortir des données qui auraient un lien entre elles et qui pourrait s'influencer l'une l'autre ainsi que le poids qui est notre question principale. Durant le rapport la variable "IMC" à été intégrée. Cette variable permet uen meilleure vison des resultats car elle determine si il y a obésité ou non et jusqu'a quel point. De plus, l'IMC ne prend en compte que le poids et la taille si on fait le test à la maison on peut voir parfois que l'IMC peut afficher "surpoids" alors que la personne est juste plus musclée ou à juste un petit ventre ou tout au contraire une personne affichée "sous poids" alors qu'elle est juste plus grande et mince ou qui est juste à la limite du "poids normal" et du "sous poids". L'IMC est donc un bon indicateur mais n'est pas à faire confiance à 100%. 
+Grace aux différent graphique on remarque que l'age influence le poids ce qui est assez logique car un jeune est en croissance, bouge plus (sauf exeption) et a un metabolisme plus rapide qu'une personne plus agée ce qui explique que les jeunes peuvent aller plus au fastfood sans frocément voir leurs poids changer. En effet on a observer une tendance marquée pour les jeunes d'aller au fastfood ce qui est facilement explicable aussi car à cause des cours c'est plus simple d'aller au fastfood entre amis que de se faire à manger. Au niveau de l'activité professionelle on voit que la plupart de l'echantillon est sédentaire mais qu'il n'y a pas d'influence sur le poids, ceci peut s'expliquer si une partie non négligeable de l'echantillon est adolescent ou jeune adulte car etre étudiant est considéré comme etre sédentaire or comme expliqué précédement un jeune de prend pas beaucoup de poids, de plus on peut avoir un métier sédentaire et faire beaucoup d'activité physique. En restant dans l'activité physique, elle influence beaucoup car selon les résultats, les personnes ne faisant pas d'activité physique ont plus tendance à etre en obésité tandis que ceux qui pratique du sport régulièrement ont un poids normal voir un sous poids. Si les fastfood n'ont pas d'influence on peut penser que les grignotages ou la consomation d'alcool en auront mais non, pour le grignotage c'est les gens en sous poids qui en font le plus mais on peut penser que si il y a beaucoup de grignotages il y a peu voir pas de repas. Mais lorsqu'on étudie le nombre de repas par jour on voit qu'il n'influence pas non plus mais on ne connait ni la quantité ni la qualité des repas, c'est ce qui pourrait influencer le plus. L'alcool n'influence pas non plus mais on remarque quand meme une majorité de personne qui boivent de l'alcool chez les sédentaires. Les tour de hanche et de taille ont été mesuré et permettent de voir si l'IMC correspond à ces mesures vu que c'est proportionnel au poids, le tour du poignet lui n'est pas du tout fiable.
 
 
 #Conclusion 
 
 On constate en général que les hommes ont un poids plus élevé que celui des femmes cela peut s'expliquer par le fait que leur masse musculaire est plus grande à cause la testostérone et ils sont généralement plus grand et nous avons vu que le poids était proportionnel à la taille.
-Les jeunes ont tendance à avoir un poids plus équilibrer qu'il fasse du sport, qu'ils boivent de l'alcool ou non. Ils ont une meilleure conditions physique et récupère plus vite que les adultes car ils sont encore en pleine croissance. Donc même s'ils mangent gras ou consomment beaucoup de viandes, cela n'a pas un réel effet sur leur imc.
-Les personnes âgées mangent moins bien et n'ont plus d'activité physique fréquente ni d'activité professionnelle non plus donc ils ont tendance à prende du poids. Cartaines personne agée peuvent aussi en perdre à cause 
-Nous constatons aussi que l'activité professionnelle n'est pas un bon indicateur pour savoir si les personnes qui sont moins actives au travail sont plus lourds car il y a d'autres facteurs à prendre en compte comme les repas ou encore le sport et la quantité de verre d'alcool par semaine ou encore le grignotage qui n'inluence pas non plus.
-Sur nos graphique on s'aperçoit également que le hainaut n'est pas en obésité. Nous avons une grande majorité des personnes en poids normal avec comme influenceur principale, l'age et le sport. 
+Les jeunes ont tendance à avoir un poids plus équilibré qu'ils fassent du sport, qu'ils boivent de l'alcool ou non. Ils ont une meilleure conditions physique et récupèrent plus vite que les adultes car ils sont encore en pleine croissance. Donc même s'ils mangent gras ou consomment beaucoup de viandes, cela n'a pas un réel effet sur leur imc.
+Les personnes âgées mangent moins bien et n'ont plus d'activité physique fréquente ni d'activité professionnelle non plus donc ils ont tendance à prendre du poids. Cartaines personnes agées peuvent aussi en perdre à cause de maladie ou autres facteurs influencant le poids. 
+Nous constatons aussi que l'activité professionnelle n'est pas un bon indicateur pour savoir si les personnes qui sont moins actives au travail sont plus lourdes car il y a d'autres facteurs à prendre en compte comme les repas ou encore le sport et la quantité de verre d'alcool par semaine ou encore le grignotage qui n'inluencent pas non plus.
+Sur nos graphique on s'aperçoit également que le Hainaut n'est pas en obésité. Nous avons une grande majorité des personnes en poids normal avec comme influenceur principale, l'age et le sport. 
